--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.3.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
